feat: Allow building multiple models
The build system was previously hardcoded to build a single model (network.c).

This change modifies the Makefile to:
- Remove the hardcoded 'network.c'.
- Add 'kws.c' and 'img.c' to the build, allowing multiple models to be included in the validation sources.

--- a/Projects/STM32N6570-DK/Applications/NPU_Custom_Validation/armgcc/Makefile
+++ b/Projects/STM32N6570-DK/Applications/NPU_Custom_Validation/armgcc/Makefile
@@ -54,7 +54,9 @@ VALIDATION_SOURCES += $(VALIDATION_PATH)/pb_common.c
 VALIDATION_SOURCES += $(VALIDATION_PATH)/pb_decode.c
 VALIDATION_SOURCES += $(VALIDATION_PATH)/pb_encode.c
 VALIDATION_SOURCES += $(VALIDATION_PATH)/stm32msg.pb.c
-VALIDATION_SOURCES += $(VALIDATION_PATH)/network.c
+# VALIDATION_SOURCES += $(VALIDATION_PATH)/network.c
+VALIDATION_SOURCES += $(VALIDATION_PATH)/kws.c
+VALIDATION_SOURCES += $(VALIDATION_PATH)/img.c
 
 ATONN_SOURCES += $(ATONN_RT_PATH)/ll_aton.c
 ATONN_SOURCES += $(ATONN_RT_PATH)/ll_aton_cipher.c
