chore(.gitignore): Track NPU low-level middleware files
The global ignore rule (`*`) was preventing the necessary NPU low-level driver files
from being tracked in the repository.

This change adds specific rules to un-ignore the
`middlewares/st/ai/npu/ll_aton` path, ensuring these essential middleware source
files are properly included.

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 !/scripts/
 !/scripts/**
 
-# Keep the path to NPU_Validation_Custom, and only that path.
+# Keep the path to NPU_Custom_Validation, and only that path.
 !/Projects/
 /Projects/*
 !/Projects/STM32N6570-DK/
@@ -15,3 +15,15 @@
 /Projects/STM32N6570-DK/Applications/*
 !/Projects/STM32N6570-DK/Applications/NPU_Custom_Validation/
 !/Projects/STM32N6570-DK/Applications/NPU_Custom_Validation/**
+
+# Keep Middlewares/ST/AI/NPU/ll_aton and its content
+!/Middlewares/
+/Middlewares/*
+!/Middlewares/ST/
+/Middlewares/ST/*
+!/Middlewares/ST/AI/
+/Middlewares/ST/AI/*
+!/Middlewares/ST/AI/NPU/
+/Middlewares/ST/AI/NPU/*
+!/Middlewares/ST/AI/NPU/ll_aton/
+!/Middlewares/ST/AI/NPU/ll_aton/**
